Fix hr overflow visibility Fix sidebar banners rendering to be crisp

--- a/src/base/elements.css
+++ b/src/base/elements.css
@@ -23,6 +23,7 @@ hr {
   height: 1px;
   margin: 2rem;
   position: relative;
+  overflow: visible;
 }
 
 hr::after {
