--- a/src/blocks/sidebar-banners.css
+++ b/src/blocks/sidebar-banners.css
@@ -8,6 +8,7 @@
 
 .sidebar-banners > img {
   box-shadow: var(--e-shadow);
+  image-rendering: crisp-edges;
 }
 
 .sidebar-banners--firefox {
